@@ -2,6 +2,7 @@
 # make sure configure was run with coverage enabled...
 lcov --directory . --zerocounters
 make check
+rm `find * -name "*_test.gc??"`  `find src/testcurl -name "*.gc??"` `find src/testzzuf -name "*.gc??"` `find src/examples -name "*.gc??"`
 for n in `find * -name "*.gc*" | grep libs`
 do
   cd `dirname $n`
