@@ -1,3 +1,8 @@
+Wed Sep 22 09:48:59 CEST 2010
+	Changed port argument from 'unsigned short' to 'uint16_t'.
+	Removed dead code when compiling with messages enabled.
+	Minimal unrelated code cleanup. -CG
+
 Tue Sep 21 15:12:41 CEST 2010
 	Use "size_t" for buffer size instead of "int". -CG
 
